--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "build": "tsc",
-        "test": "vitest"
+        "test": "vitest --silent=passed-only"
     },
     "keywords": [],
     "author": "",
